--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resume",
-  "homepage" : "https://jasonlawton.com/resume/resume.html",
+  "homepage" : "https://jasonlawton.com/resume/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
